Add js, update css, update html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div>
         <h1>Throw a hatchet!</h1>
         <div id="reset-container">
-            <img src="assets/images/target.png" alt="Hatchet Target">
+            <img src="assets/images/target.png" alt="Hatchet Target" id="image1">
+            <img src="assets/images/target_hit.png" alt="Hatchet Target Hit" id="image2" class="hide">
             <button id="reset-button">RESET</button><br>
             NUMBER OF RESETS: <span id="num-resets">0</span>
         </div>
+
         <div class="clear"></div>
         <div class="left">
             <h2>
@@ -48,6 +50,7 @@
         <div class="clear"></div>
         <div id="winner"></div>
     </div>
+    <script src="./assets/javascript/main.js"></script>
     <script src="./assets/javascript/game.js"></script>
 </body>
 
