Update .gitignore, js, indices

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div>
         <h1>Coming soon...Throw a hatchet!</h1>
+        <!-- <h2>Comment line</h2> -->
         <div id="reset-container">
             <img src="assets/images/target.png" alt="Hatchet Target" id="image1">
             <img src="assets/images/target_hit.png" alt="Hatchet Target Hit" id="image2" class="hide">
