--- a/fourth_try_index.html
+++ b/fourth_try_index.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
-        <title>Click Counter</title>
-        <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
-    </head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+    <title>Hatchet Throw</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <h1>Click Counter 1</h1>
-    <p>Click the button to increment the counters:</p>
-    <button id="myButton">Click me!</button>
-    <p>Click count: <span id="clickCount1-el">0</span></p>
-    <p>Random count: <span id="randomCount1-el">0</span></p>
+    <div>
+        <h1>Throw a hatchet!</h1>
 
-    <h1>Click Counter 2</h1>
-    <p>Click the button to increment the counters:</p>
-    <button id="myButton2">Click me 2!</button>
-    <p>Click count 2: <span id="clickCount2-el">0</span></p>
-    <p>Random count 2: <span id="randomCount2-el">0</span></p>
+        <div class="target-container">
+            <div class="target">
+                <div class="target-nohit">
+                    <img src="./assets/images/target.png" alt="target">
+                </div>
+                <div class="target-hit" id="card">
+                    <img src="./assets/images/target_hit.png" alt="target-hit">
+                </div>
+            </div>
+        </div>
 
-    <h1>Reset</h1>
-    <p>Click to reset the counters:</p>
-    <button id="resetButton">Reset</button>
-    <p>Reset count: <span id="resetCount-el">0</span></p>
+
+        <div id="reset-container">
+            <p>Click to reset</p>
+            <button id="resetButton">Reset</button>
+            <p>Reset count: <span id="resetCount-el">0</span></p>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="left">
+            <h2>Thrower 1</h2>
+            <p>Click to throw</p>
+            <button id="myButton">Throw!</button>
+            <p>Throw count: <span id="clickCount1-el">0</span></p>
+            <p>Hit count: <span id="randomCount1-el">0</span></p>
+        </div>
+
+
+        <div class="right">
+            <h2>Thrower 2</h2>
+            <p>Click to throw</p>
+            <button id="myButton2">Throw!</button>
+            <p>Throw count: <span id="clickCount2-el">0</span></p>
+            <p>Hit count: <span id="randomCount2-el">0</span></p>
+        </div>
+
+        <div class="clear"></div>
+
+    </div>
 
     <script src="./assets/javascript/counter.js"></script>
 
