Update css, js, html. Basic functionality OK.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
 <body>
     <div>
         <h1>Coming soon...Throw a hatchet!</h1>
-        <!-- <h2>Comment line</h2> -->
-        <div id="reset-container">
-            <img src="assets/images/target.png" alt="Hatchet Target" id="image1">
-            <img src="assets/images/target_hit.png" alt="Hatchet Target Hit" id="image2" class="hide">
-            <button id="reset-button">What's this?</button><br>
-            <!-- NUMBER OF RESETS: <span id="num-resets">0</span> -->
-        </div>
 
-    <script src="./assets/javascript/main.js"></script>
-    <!-- <script src="./assets/javascript/game.js"></script> -->
+        <div class="target-container">
+            <div class="target">
+                <img src="./assets/images/target.png" alt="target">
+            </div>
+        </div>
 </body>
 
 </html>
