--- a/new_index.html
+++ b/new_index.html
@@ -18,11 +18,11 @@
 
         <div class="target-container">
             <div class="target">
+                <div class="target-hit">
+                    <img src="./assets/images/target_hit.png" alt="target-hit">
+                </div>
                 <div class="target-nohit">
                     <img src="./assets/images/target.png" alt="target">
-                </div>
-                <div class="target-hit" id="card">
-                    <img src="./assets/images/target_hit.png" alt="target-hit">
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
 
     </div>
 
-    <script src="./assets/javascript/counter.js"></script>
+    <script src="./assets/javascript/game.js"></script>
 
 </body>
 
