Optimize image load time

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="target-container">
             <div class="target">
                 <div class="target-hit">
-                    <img src="./assets/images/target_hit.png" alt="target-hit">
+                    <img src="./assets/images/target_hit.webp" alt="target-hit">
                 </div>
                 <div class="target-nohit">
-                    <img src="./assets/images/target.png" alt="target">
+                    <img src="./assets/images/target.webp" alt="target">
                 </div>
             </div>
         </div>
